# EdTechBE

./: .env.example  config.local.yaml  docker-compose.yml  traefik.yml
.github/workflows/: stg-app.yml
agentic-rag/: .dockerignore  Dockerfile  README.md  docker-build.bat  docker-build.sh  pyproject.toml  run_api.py
agentic-rag/agentic_rag/: api.py  database.py  ingestion.py  main.py  ui.py
agentic-rag/agentic_rag/graph/: consts.py  graph.py  state.py
agentic-rag/agentic_rag/graph/chains/: __init__.py  answer_grader.py  batch_retrieval_grader.py  combined_grader.py  generation.py  hallucination_grader.py  llm_config.py  retrieval_grader.py  router.py
agentic-rag/agentic_rag/graph/nodes/: __init__.py  generate.py  grade.py  greeting.py  question_validator.py  reject.py  retrieve.py  web_search.py  web_search_validator.py
agentic-rag/agentic_rag/utils/: logger.py
agentic-rag/knowledge-base/: README.md
agentic-rag/knowledge-base/faq/: common-questions.md
agentic-rag/knowledge-base/instructor-guide/: becoming-an-instructor.md  course-landing-page.md  course-pricing.md  creating-a-course.md  creating-lessons.md  dashboard-overview.md  managing-course-structure.md  publishing-a-course.md
agentic-rag/knowledge-base/user-guide/: browsing-courses.md  enrolling-in-courses.md  my-learning.md  taking-lessons.md
agentic-rag/tests/: test_chains.py
api-edtech/: Dockerfile  build.gradle
janus/: janus.jcfg
transcode-video-worker/: Dockerfile  go.mod  go.sum  main.go
transcript-video-worker/: .gitignore  Dockerfile  README.md  main.py  requirements.txt
(+24 files in other folders)
